[package]
name = "thermo-esp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { version = "0.10.0", features = ["async", "embassy-time-timg0"]}
esp32c3 = { version = "0.15.0",  features = ["critical-section"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "c7ca849274cf3d7a08b49c260bb46693c91c85c0", features = ["async", "ble", "esp32c3"]}
log = "0.4.18"
heapless = { version = "0.7.16", default-features = false }
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0", optional = true }
fugit = { version = "0.3.7"}

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", features = ["async", "macros"] }

embassy-executor = { version = "0.2.0", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
esp-println = { version = "0.5.0", features = ["log", "esp32c3"] }
esp-backtrace = { version = "0.7.0", features = ["panic-handler", "exception-handler", "print-uart", "esp32c3"] }
embedded-hal-async = { version = "0.2.0-alpha.0",  optional = true}
examples-util = { git = "https://github.com/esp-rs/esp-wifi", rev = "c7ca849274cf3d7a08b49c260bb46693c91c85c0", features = ["esp32c3"] }
static_cell = { version = "1.1", features = ["nightly"]}

byteorder = { version = "1.4.3", default-features = false }

[features]
default = ["esp32c3", "async", "ble"]
esp32c3 = ["embassy-executor/arch-riscv32"]
async = ["esp-wifi/async", "bleps/async", "dep:embedded-hal-async", "esp32c3-hal/async", "esp32c3-hal/embassy-time-timg0"]
ble = ["esp-wifi/ble"]
